[gd_scene load_steps=2 format=3 uid="uid://bpcioajcj5seh"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_xubtr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xubtr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_top = 30.0
offset_right = 310.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "CROSSWALK
CHAOS     "
horizontal_alignment = 1

[node name="Btn_Play" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 78.5
offset_right = 50.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="Btn_HowTo" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = 140.0
offset_right = 53.5
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
text = "HOW TO PLAY"

[node name="Btn_Quit" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 200.0
offset_right = 50.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
